--- a/index.html
+++ b/index.html
@@ -8,8 +8,79 @@
 </head>
 
 <body>
+  <!-- <header class="header">
+    <nav class="nav-bar">
+      <div class="nav-bar__list">
+        <ul class="nav-list">
+          <li class="nav-list__item">About Us</li>
+          <li class="nav-list__item">Service</li>
+          <li class="nav-list__item">Blog</li>
+          <li class="nav-list__item">Contact</li>
+        </ul>
+      </div>
+      <div class="nav-bar__logo">
+        <h2>Marft</h2>
+      </div>
+      <div class="nav-bar__socials">
+        <ul class="social-icon">
+          <li class="social-icon__item">
+            <div class="img-icon">
+              <img src="/src/assets/images/icons/icons8-facebook-40.png" alt="facebook">
+            </div>
+          </li>
+          <li class="social-icon__item">
+            <div class="img-icon">
+              <img src="/src/assets/images/icons/icons8-beach-ball-40.png" alt="marft">
+            </div>
+          </li>
+          <li class="social-icon__item">
+            <div class="img-icon">
+              <img src="/src/assets/images/icons/icons8-instagram-40.png" alt="instagram">
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header> -->
 
-  <script type="module" src="/src/js/main.js"></script>
+  <header class="header">
+    <nav class="nav-bar">
+      <!-- links -->
+      <ul class="nav-list">
+        <li class="nav-list__item">About Us</li>
+        <li class="nav-list__item">Service</li>
+        <li class="nav-list__item">Blog</li>
+        <li class="nav-list__item">Contact</li>
+      </ul>
+
+      <div class="nav-header">
+        <h2>Marft</h2>
+        <button class="nav-toggle">
+          <i class="bars">|||</i>
+        </button>
+      </div>
+
+      <!-- social media -->
+      <ul class="social-icons">
+        <li class="social-icons__item">
+          <a href="https://www.facebook.com">
+            <i><img src="/src/assets/images/icons/icons8-facebook-40.png" alt="facebook"></i>
+          </a>
+        </li>
+        <li class="social-icons__item">
+          <a href="https://www.instagram.com">
+            <i><img src="/src/assets/images/icons/icons8-instagram-40.png" alt="instagram"></i>
+          </a>
+        </li>
+        <li class="social-icons__item">
+          <a href="https://www.instagram.com">
+            <i><img src="/src/assets/images/icons/icons8-beach-ball-40.png" alt="ball"></i>
+          </a>
+        </li>
+      </ul>
+      </div>
+    </nav>
+    <script type="module" src="/src/js/main.js"></script>
 </body>
 
 </html>
