--- a/index.html
+++ b/index.html
@@ -8,41 +8,6 @@
 </head>
 
 <body>
-  <!-- <header class="header">
-    <nav class="nav-bar">
-      <div class="nav-bar__list">
-        <ul class="nav-list">
-          <li class="nav-list__item">About Us</li>
-          <li class="nav-list__item">Service</li>
-          <li class="nav-list__item">Blog</li>
-          <li class="nav-list__item">Contact</li>
-        </ul>
-      </div>
-      <div class="nav-bar__logo">
-        <h2>Marft</h2>
-      </div>
-      <div class="nav-bar__socials">
-        <ul class="social-icon">
-          <li class="social-icon__item">
-            <div class="img-icon">
-              <img src="/src/assets/images/icons/icons8-facebook-40.png" alt="facebook">
-            </div>
-          </li>
-          <li class="social-icon__item">
-            <div class="img-icon">
-              <img src="/src/assets/images/icons/icons8-beach-ball-40.png" alt="marft">
-            </div>
-          </li>
-          <li class="social-icon__item">
-            <div class="img-icon">
-              <img src="/src/assets/images/icons/icons8-instagram-40.png" alt="instagram">
-            </div>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header> -->
-
   <header class="header">
     <nav class="nav-bar">
       <!-- links -->
@@ -80,7 +45,52 @@
       </ul>
       </div>
     </nav>
-    <script type="module" src="/src/js/main.js"></script>
+  </header>
+  <section class="promo">
+    <div class="promo-wrapper">
+      <div class="promo-wrapper__item">
+        <div class="promo-box">
+          <div class="promo-box__title">
+            <h3>
+              Increase your performance on
+              social media
+            </h3>
+          </div>
+          <div class="promo-box__subtext">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ea ullam perferendis? Autem nesciunt magni
+            quia?
+          </div>
+          <div class="promo-box__info">
+            <button class="btn-box">Get Started</button>
+            <div class="rating-box">
+              <div class="rating-box__avatar">
+                <img src="/src/assets/images/models/model-1.png" alt="model-1" class="avatar">
+              </div>
+              <div class="rating-box__avatar">
+                <img src="/src/assets/images/models/model-2.png" alt="model-2" class="avatar">
+              </div>
+              <div class="rating-box__avatar">
+                <img src="/src/assets/images/models/model-3.png" alt="model-3" class="avatar">
+              </div>
+            </div>
+            <div class="rating-box__numbers">
+              <h3>Rating</h3>
+              <span>5.00</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="promo-wrapper__item">
+        <div class="promo-photo-box">
+          <img src="/src/assets/images/main-pictures/page-1/working-man.png" alt="working-man">
+        </div>
+        <div class="promo-photo-box">
+          <img src="/src/assets/images/main-pictures/page-1/phone.png" alt="phone">
+        </div>
+      </div>
+    </div>
+  </section>
+  <script type="module" src="/src/js/main.js"></script>
 </body>
 
 </html>
