feat: add clients section

--- a/index.html
+++ b/index.html
@@ -90,6 +90,41 @@
       </div>
     </div>
   </section>
+
+  <section class="clients">
+    <div class="clients-wrapper">
+      <div class="clients-box">
+        <div class="clients-box__title">
+          <h3>Trusted by over 10k clients & brands</h3>
+        </div>
+        <div class="clients-box__subtext">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+      </div>
+      <div class="clients-grid">
+        <div class="clients-grid__item">
+          <img src="/src/assets/images/companies/google-trend.png" alt="google">
+        </div>
+        <div class="clients-grid__item">
+          <img src="/src/assets/images/companies/intercome-trend.png" alt="intercome">
+        </div>
+        <div class="clients-grid__item">
+          <img src="/src/assets/images/companies/logoipsum-trend.png" alt="logoipsum">
+        </div>
+        <div class="clients-grid__item">
+          <img src="/src/assets/images/companies/logoipsum.png" alt="logo">
+        </div>
+        <div class="clients-grid__item">
+          <img src="/src/assets/images/companies/netflix-trend.png" alt="netflix">
+        </div>
+        <div class="clients-grid__item">
+          <img src="/src/assets/images/companies/slack-trend.png" alt="slack">
+        </div>
+      </div>
+    </div>
+    <div class="clients-wrapper__item"></div>
+    </div>
+  </section>
   <script type="module" src="/src/js/main.js"></script>
 </body>
 
