feat: add marketing section

--- a/index.html
+++ b/index.html
@@ -125,6 +125,39 @@
     <div class="clients-wrapper__item"></div>
     </div>
   </section>
+  <section class="marketing">
+    <div class="marketing__wrapper">
+      <div class="marketing-photo-box">
+        <div class="marketing-photo-box__item">
+          <img src="/src/assets/images/main-pictures/page-2/bigger-photo.png" alt="bigger">
+        </div>
+        <div class="marketing-photo-box__item">
+          <img src="/src/assets/images/main-pictures/page-2/smaller-photo.png" alt="smaller">
+        </div>
+      </div>
+      <div class="marketing-box">
+        <div class="marketing-box__title">
+          Take your social media marketing to the next level
+        </div>
+        <ul class="marketing-list">
+          <li class="marketing-list__item">
+            Leo erat magna feugirat nan enim
+          </li>
+          <li class="marketing-list__item">
+            Leo erat magna feugirat
+          </li>
+          <li class="marketing-list__item">
+            Leo erat magna non enim
+          </li>
+        </ul>
+        <div class="marketing-box__subtext">
+          Leo erat magna feugiat pellentesque non enim eu donec diam. Proin donec lacus tortor posuere diam lorem massa
+          viverra aliquam. Vitae nulla nullam in viverra lectus.
+        </div>
+        <div class="btn-box marketing-btn">About Us</div>
+      </div>
+    </div>
+  </section>
   <script type="module" src="/src/js/main.js"></script>
 </body>
 
