feat: add video and service section

--- a/index.html
+++ b/index.html
@@ -158,6 +158,79 @@
       </div>
     </div>
   </section>
+
+  <section class="video">
+    <video class="video-wrapper" muted autoplay loop>
+      <source src="/src/assets/video/production ID_3877494.mp4" />
+    </video>
+    <!-- <button class="video-btn">
+      <img src="/src/assets/images/figures/Arrow - Right 2.png" alt="play">
+    </button> -->
+  </section>
+
+  <section class="service">
+    <div class="service-wrapper">
+      <div class="service-box">
+        <div class="service-box__title">
+          <h2>What we provide</h2>
+        </div>
+        <div class="service-box__desc">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna, non nisl
+            tincidunt ut elementum turpis.</p>
+        </div>
+      </div>
+      <div class="service-container">
+        <div class="service-container-item service-item">
+          <div class="service-item__figure">
+            <img src="/src/assets/images/figures/squares.png" alt="squares">
+          </div>
+          <div class="service-item__title">
+            <h3>Social Advertising</h3>
+          </div>
+          <div class="service-item__subtext">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aspernatur, commodi laboriosam incidunt
+            reprehenderit corrupti. A aperiam sint dolor eveniet, at quis esse impedit, perspiciatis, laborum ut libero
+            rerum sequi!
+          </div>
+          <div class="service-item__learn-more">
+            <a href="">Learn More</a>
+          </div>
+        </div>
+        <div class="service-container-item service-item">
+          <div class="service-item__figure">
+            <img src="/src/assets/images/figures/cirles.png" alt="circles">
+          </div>
+          <div class="service-item__title">
+            <h3>Partnership Management</h3>
+          </div>
+          <div class="service-item__subtext">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aspernatur, commodi laboriosam incidunt
+            reprehenderit corrupti. A aperiam sint dolor eveniet, at quis esse impedit, perspiciatis, laborum ut libero
+            rerum sequi!
+          </div>
+          <div class="service-item__learn-more">
+            <a href="">Learn More</a>
+          </div>
+        </div>
+        <div class="service-container-item service-item">
+          <div class="service-item__figure">
+            <img src="/src/assets/images/figures/triangles.png" alt="triangles">
+          </div>
+          <div class="service-item__title">
+            <h3> Contect Creations</h3>
+          </div>
+          <div class="service-item__subtext">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aspernatur, commodi laboriosam incidunt
+            reprehenderit corrupti. A aperiam sint dolor eveniet, at quis esse impedit, perspiciatis, laborum ut libero
+            rerum sequi!
+          </div>
+          <div class="service-item__learn-more">
+            <a href="">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <script type="module" src="/src/js/main.js"></script>
 </body>
 
