feat: add review and increasing section

--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
 
   <section class="service">
     <div class="service-wrapper">
-      <div class="service-box">
-        <div class="service-box__title">
+      <div class="service-box title-box">
+        <div class="service-box__title title-box__title">
           <h2>What we provide</h2>
         </div>
-        <div class="service-box__desc">
+        <div class="service-box__desc title-box__desc">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna, non nisl
             tincidunt ut elementum turpis.</p>
         </div>
@@ -188,9 +188,10 @@
             <h3>Social Advertising</h3>
           </div>
           <div class="service-item__subtext">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aspernatur, commodi laboriosam incidunt
-            reprehenderit corrupti. A aperiam sint dolor eveniet, at quis esse impedit, perspiciatis, laborum ut libero
-            rerum sequi!
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aspernatur, commodi laboriosam incidunt
+              reprehenderit corrupti. A aperiam sint dolor eveniet, at quis esse impedit, perspiciatis, laborum ut
+              libero
+              rerum sequi!</p>
           </div>
           <div class="service-item__learn-more">
             <a href="">Learn More</a>
@@ -204,9 +205,10 @@
             <h3>Partnership Management</h3>
           </div>
           <div class="service-item__subtext">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aspernatur, commodi laboriosam incidunt
-            reprehenderit corrupti. A aperiam sint dolor eveniet, at quis esse impedit, perspiciatis, laborum ut libero
-            rerum sequi!
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aspernatur, commodi laboriosam incidunt
+              reprehenderit corrupti. A aperiam sint dolor eveniet, at quis esse impedit, perspiciatis, laborum ut
+              libero
+              rerum sequi!</p>
           </div>
           <div class="service-item__learn-more">
             <a href="">Learn More</a>
@@ -220,14 +222,67 @@
             <h3> Contect Creations</h3>
           </div>
           <div class="service-item__subtext">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aspernatur, commodi laboriosam incidunt
-            reprehenderit corrupti. A aperiam sint dolor eveniet, at quis esse impedit, perspiciatis, laborum ut libero
-            rerum sequi!
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aspernatur, commodi laboriosam incidunt
+              reprehenderit corrupti. A aperiam sint dolor eveniet, at quis esse impedit, perspiciatis, laborum ut
+              libero
+              rerum sequi!</p>
           </div>
           <div class="service-item__learn-more">
             <a href="">Learn More</a>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="review">
+    <div class="review-wrapper">
+      <div class="review-item">
+        <div class="review-item__rating">
+          <p>4.00</p>
+          <!--stars-->
+        </div>
+        <div class="review-item__text">
+          <p> ”Lorem ipsum dolor sit amet, ut consectetur adipiscing elit. In urna, non nisl tincidunt ut elementum st
+            turpis.“</p>
+        </div>
+        <div class="review-item__username username">
+          <div class="username__icon">
+            <img src="/src/assets/images/models/model-4.png" alt="Joe">
+          </div>
+          <div class="username-info-box">
+            <div class="username-info-box__name">
+              Joe Elia
+            </div>
+            <div class="username-info-box__job">
+              User Interface Design
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="review-item">
+        <div class="review-photo">
+          <div class="slack-container">
+            <img src="/src/assets/images/companies/slack-trend.png" alt="slack-on-man">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="increasing">
+    <div class="increasing-wrapper">
+      <div class="increasing-box title-box">
+        <div class="increasing-box__title title-box__title">
+          <h2>Ready to increase
+            your social media performance</h2>
+        </div>
+        <div class="increasing-box__desc title-box__desc">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae obcaecati excepturi asperiores,
+            reprehenderit at eos! Praesentium quae, eum corporis excepturi odio distinctio quibusdam esse atque nostrum
+            perspiciatis sapiente. Est, alias.</p>
+        </div>
+        <button class="btn-box">Get started</button>
       </div>
     </div>
   </section>
