feat: add swiper, blog section and some images

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               libero
               rerum sequi!</p>
           </div>
-          <div class="service-item__learn-more">
+          <div class="service-item more-link">
             <a href="">Learn More</a>
           </div>
         </div>
@@ -210,7 +210,7 @@
               libero
               rerum sequi!</p>
           </div>
-          <div class="service-item__learn-more">
+          <div class="service-item more-link">
             <a href="">Learn More</a>
           </div>
         </div>
@@ -227,7 +227,7 @@
               libero
               rerum sequi!</p>
           </div>
-          <div class="service-item__learn-more">
+          <div class="service-item more-link">
             <a href="">Learn More</a>
           </div>
         </div>
@@ -286,6 +286,122 @@
       </div>
     </div>
   </section>
+
+  <section class="blog">
+    <div class="blog-wrapper">
+      <div class="blog-box">
+        <div class="blog-box-nav">
+          <div class="blog-box-nav__title">
+            <h3>Read our blogs</h3>
+          </div>
+          <div class="blog-box-nav__desc">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut cumque vitae autem pariatur voluptatem quo
+              maiores consequatur iusto vero id, repellat accusantium perspiciatis nostrum? Nemo blanditiis eveniet
+              fugiat
+              nulla neque?</p>
+          </div>
+        </div>
+      </div>
+      <div class="swiper blog">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="blog-item">
+              <div class="blog-item__image">
+                <img src="/src/assets/images/main-pictures/blog/studying.png" alt="study">
+              </div>
+              <div class="blog-item-info-box">
+                <div class="blog-item-info-box__date">
+                  <p>April 30, 2022</p>
+                </div>
+                <div class="blog-item-info-box__title">
+                  <h3>How to collaborate with companies</h3>
+                </div>
+              </div>
+              <div class="blog-item__text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque harum omnis maxime, iusto sit
+                  suscipit quo nostrum possimus dolorum magni voluptatem. Libero, corporis sapiente amet quasi ad quia
+                  explicabo omnis?</p>
+              </div>
+              <div class="blog-item__btn">
+                <a href="" class="more-link">Read More</a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="blog-item">
+              <div class="blog-item__image">
+                <img src="/src/assets/images/main-pictures/blog/laptop.png" alt="laptop">
+              </div>
+              <div class=" blog-item-info-box">
+                <div class="blog-item-info-box__date">
+                  <p>April 30, 2022</p>
+                </div>
+                <div class="blog-item-info-box__title">
+                  <h3>About social media advertising</h3>
+                </div>
+              </div>
+              <div class="blog-item__text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque harum omnis maxime, iusto sit
+                  suscipit quo nostrum possimus dolorum magni voluptatem. Libero, corporis sapiente amet quasi ad quia
+                  explicabo omnis?</p>
+              </div>
+              <div class="blog-item__btn">
+                <a href="" class="more-link">Read More</a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="blog-item">
+              <div class="blog-item__image">
+                <img src="/src/assets/images/main-pictures/blog/learing.jpg" alt="learing">
+              </div>
+              <div class=" blog-item-info-box">
+                <div class="blog-item-info-box__date">
+                  <p>April 30, 2022</p>
+                </div>
+                <div class="blog-item-info-box__title">
+                  <h3>How to collaborate with companies</h3>
+                </div>
+              </div>
+              <div class="blog-item__text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque harum omnis maxime, iusto sit
+                  suscipit quo nostrum possimus dolorum magni voluptatem. Libero, corporis sapiente amet quasi ad quia
+                  explicabo omnis?</p>
+              </div>
+              <div class="blog-item__btn">
+                <a href="" class="more-link">Read More</a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="blog-item">
+              <div class="blog-item__image">
+                <img src="/src/assets/images/main-pictures/blog/web.jpg" alt="web">
+              </div>
+              <div class="blog-item-info-box">
+                <div class="blog-item-info-box__date">
+                  <p>April 30, 2022</p>
+                </div>
+                <div class="blog-item-info-box__title">
+                  <h3>How to collaborate with companies</h3>
+                </div>
+              </div>
+              <div class="blog-item__text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque harum omnis maxime, iusto sit
+                  suscipit quo nostrum possimus dolorum magni voluptatem. Libero, corporis sapiente amet quasi ad quia
+                  explicabo omnis?</p>
+              </div>
+              <div class="blog-item__btn">
+                <a href="" class="more-link">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
+  </section>
+  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
   <script type="module" src="/src/js/main.js"></script>
 </body>
 
