feat: add footer

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="Marft layout" />
+  <meta name="keywords" content="HTML, CSS, JavaScript" />
+  <meta name="author" content="3Tushka" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Marft</title>
 </head>
@@ -401,6 +404,99 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="footer-wrapper">
+      <div class="footer-title-box title-box">
+        <div class="footer-title-box__title title-box__title">
+          <h2>Marft</h2>
+        </div>
+        <div class="footer-title-box__desc title-box__desc">
+          <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="footer-socials">
+          <ul class="social-icons">
+            <li class="social-icons__item">
+              <a href="https://www.facebook.com">
+                <i><img src="/src/assets/images/icons/icons8-facebook-40.png" alt="facebook"></i>
+              </a>
+            </li>
+            <li class="social-icons__item">
+              <a href="https://www.instagram.com">
+                <i><img src="/src/assets/images/icons/icons8-instagram-40.png" alt="instagram"></i>
+              </a>
+            </li>
+            <li class="social-icons__item">
+              <a href="https://www.instagram.com">
+                <i><img src="/src/assets/images/icons/icons8-beach-ball-40.png" alt="ball"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="subscribe">
+        <div class="subscribe-box title-box">
+          <div class="subscribe-box__title title-box__title">
+            <h2>Subscribe to our Newsletter</h2>
+          </div>
+          <div class="subscribe-box__desc title-box__desc">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis aliquam laboriosam culpa
+              praesentium accusantium fugit a nobis eveniet.</p>
+          </div>
+        </div>
+        <div class="subscribe-search-box">
+          <input type="text" placeholder="Enter your mail" class="search-bar">
+          <button class="search-btn"> Subscribe </button>
+        </div>
+      </div>
+      <div class="contact-box">
+        <div class="contact-item">
+          <div class="contact-item__title">
+            <p>DM us on:</p>
+          </div>
+          <div class="contact-item__main">
+            <h4>info@marft.com</h4>
+          </div>
+        </div>
+        <div class="contact-item">
+          <div class="contact-item__title">
+            <p>Call us on:</p>
+          </div>
+          <div class="contact-item__main">
+            <h4>(+1) 0139 2092 2033</h4>
+            <h4>(+1) 0392 5938 2000</h4>
+          </div>
+        </div>
+        <div class="contact-item">
+          <div class="contact-item__title">
+            <p>Find us:</p>
+          </div>
+          <div class="contact-item__main">
+            <h4>767 5th Street,
+              21st Floor, New York, USA</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr class="footer-line">
+    <div class="privacy-box">
+      <div class="privacy-item">
+        <p>©Marft 2021. All rights reserved.</p>
+      </div>
+      <div class="privacy-item">
+        <div class="privacy-policy">
+          <a href="">
+            <p>Privacy Policy</p>
+          </a>
+        </div>
+        <div class="privacy-policy">
+          <a href="">
+            <p>Terms of Conditions</p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
   <script type="module" src="/src/js/main.js"></script>
 </body>
