style: add media

--- a/index.html
+++ b/index.html
@@ -246,8 +246,11 @@
           <!--stars-->
         </div>
         <div class="review-item__text">
-          <p> ”Lorem ipsum dolor sit amet, ut consectetur adipiscing elit. In urna, non nisl tincidunt ut elementum st
-            turpis.“</p>
+
+          <q>”Lorem ipsum dolor sit amet, ut consectetur adipiscing elit. In urna, non nisl tincidunt ut elementum
+            st
+            turpis.“ </q>
+
         </div>
         <div class="review-item__username username">
           <div class="username__icon">
