style: add reset, fix

--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
     <nav class="nav-bar">
       <!-- links -->
       <ul class="nav-list">
-        <li class="nav-list__item">About Us</li>
-        <li class="nav-list__item">Service</li>
-        <li class="nav-list__item">Blog</li>
-        <li class="nav-list__item">Contact</li>
+        <li class="nav-list__item">
+          <a href="#about-us">About Us</a>
+        </li>
+        <li class="nav-list__item">
+          <a href="#service">Service</a>
+        </li>
+        <li class="nav-list__item">
+          <a href="#blog">Blog</a>
+        </li>
+        <li class="nav-list__item">
+          <a href="#contacts">Contact</a>
+        </li>
       </ul>
 
       <div class="nav-header">
@@ -128,7 +136,7 @@
     <div class="clients-wrapper__item"></div>
     </div>
   </section>
-  <section class="marketing">
+  <section class="marketing" id="about-us">
     <div class="marketing__wrapper">
       <div class="marketing-photo-box">
         <div class="marketing-photo-box__item">
@@ -171,7 +179,7 @@
     </button> -->
   </section>
 
-  <section class="service">
+  <section class="service" id="service">
     <div class="service-wrapper">
       <div class="service-box title-box">
         <div class="service-box__title title-box__title">
@@ -293,7 +301,7 @@
     </div>
   </section>
 
-  <section class="blog">
+  <section class="blog" id="blog">
     <div class="blog-wrapper">
       <div class="blog-box">
         <div class="blog-box-nav">
@@ -452,7 +460,7 @@
           <button class="search-btn"> Subscribe </button>
         </div>
       </div>
-      <div class="contact-box">
+      <div class="contact-box" id="contacts">
         <div class="contact-item">
           <div class="contact-item__title">
             <p>DM us on:</p>
